# strands-cli

./: .gitignore  GETTING_STARTED.md  Makefile  README.md  pyproject.toml  verify_init.py
.kiro/specs/session-backend-api/: design.md  requirements.md  tasks.md
.kiro/specs/strands-cli/: design.md  requirements.md  specs.md
.kiro/steering/: product.md  structure.md  tech.md
.test-session-agent/: API_TEST_RESULTS.md  INTEGRATION_STATUS.md  README.md  pyproject.toml  test_agent_simple.py  test_agent_sync.py  test_api_comprehensive.py  test_api_surface.py  test_final_verification.py  test_session_demo.py  test_session_persistence.py
.test-session-agent/agent/: __init__.py  agent.py  postgresql_session_repository.py  prompts.py  tools.py
.test-session-agent/api/: __init__.py  app.py  models.py  routes.py
.test-session-agent/scripts/: build.sh  deploy.sh  push.sh
session_backend/: .dockerignore  .env.example  Dockerfile  HELM_DEPLOYMENT_README.md  IMPLEMENTATION_SUMMARY.md  PAGINATION_FIX.md  README.md  docker-compose.yml  init.sql  migrate_schema.sql  pytest.ini  requirements.txt
session_backend/app/: __init__.py  config.py  database.py  logging_config.py  main.py
session_backend/app/models/: __init__.py  agent.py  message.py  session.py
session_backend/app/routers/: __init__.py  agents.py  health.py  messages.py  sessions.py
session_backend/app/schemas/: __init__.py  agent.py  common.py  message.py  session.py
session_backend/app/services/: __init__.py  agent_service.py  message_service.py  session_service.py
session_backend/helm/: DEPLOYMENT_GUIDE.md  HELM_CHART_SUMMARY.md  QUICK_REFERENCE.md  README.md  validate-chart.sh
session_backend/helm/session-backend/: Chart.yaml  README.md  values-development.yaml  values-production.yaml  values.yaml
session_backend/helm/session-backend/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  networkpolicy.yaml  poddisruptionbudget.yaml  postgresql-configmap.yaml  postgresql-service.yaml  postgresql-statefulset.yaml  secret.yaml  service.yaml  serviceaccount.yaml
session_backend/tests/: conftest.py  test_api_endpoints.py  test_concurrent_safety.py  test_config.py  test_container_deployment.py  test_database_models.py  test_database_transactions.py  test_health_endpoints.py  test_main.py  test_models_unit.py  test_postgresql_session_repository.py  test_schemas.py  test_services_properties.py
src/strands_cli/: __init__.py  cli.py
src/strands_cli/commands/: __init__.py  build.py  generate.py  init.py  pod_identity.py  run.py
src/strands_cli/utils/: __init__.py  docker.py  helm.py  template.py
tests/: __init__.py  conftest.py  test_cli.py
tests/test_commands/: __init__.py  test_build.py  test_deployment_assets.py  test_generate.py  test_helm_values.py  test_init.py  test_pod_identity.py  test_run.py
tests/test_utils/: __init__.py  test_docker.py  test_docker_auth.py  test_template.py
(+32 files in other folders)
